--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
     "framer-motion": "^10.17.9",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-select": "^5.8.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
