--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@hookform/resolvers": "^3.3.4",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "faker": "^6.6.6",
     "framer-motion": "^10.17.9",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
