--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@react-pdf/renderer": "^3.4.4",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "framer-motion": "^10.17.9",
     "moment": "^2.30.1",
-    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
@@ -38,6 +37,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "vite": "^5.0.8"
   }
 }
